# my-agentcore-browser

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
front/: README.md  main.py  pyproject.toml
